[tool.poetry]
name = "ctagtbd"
version = "0.1.0"
description = "CTAG TBD python library and CLI"
authors = ["Michael Jonathan Lee <code.mjlee@gmail.com>"]
license = "GPL 3.0"


packages = [
    { include = "tbdtools"},
]


[tool.poetry.dependencies]

# core deps

python = "^3.12"
typer = "^0.12.5"
loguru = "^0.7.2"
gitpython = "^3.1.43"

# required for configuring

kconfiglib = "^14.1.0"
pyhumps = "^3.8.0"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
cxxheaderparser = "^1.4.1"

# required for building docs

sphinx = {version = "^8.1.3", optional = true}
pydata-sphinx-theme = {version = "^0.16.0", optional = true}
sphinxcontrib-youtube = {version = "^1.4.1", optional = true}
breathe = {version = "^4.35.0", optional = true}


[tool.poetry.extras]
docs = ["sphinx", "pydata-sphinx-theme", "sphinxcontrib-youtube", "breathe"]


[tool.poetry.scripts]
tbd = 'tbdtools:tbd_cli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
